version/0.22/_sources/api/solver/_autosummary/settings/viscosity_2.rst.txt
:orphan:

.. _viscosity_2:

viscosity
=========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.viscosity_2.viscosity
    :show-inheritance:

.. rubric:: Attributes

====================================================   ============================================================

Attribute                                                                                                   Summary

====================================================   ============================================================
:ref:`option <option_12>`                                          Select method for calculating material property.

:ref:`value <value_11>`                                                        Specify the constant property value.

:ref:`piecewise_linear <piecewise_linear_2>`               Specify ranges and values for piecewise-linear property.

:ref:`piecewise_polynomial <piecewise_polynomial>`                                   Piecewise polynomial settings.

:ref:`polynomial <polynomial_2>`                                                               Polynomial settings.

:ref:`user_defined_function <user_defined_function>`                                 Specify user defined function.

====================================================   ============================================================

.. rubric:: Included in:

======================================================   ============================================

Parent                                                                                        Summary

======================================================   ============================================
:ref:`inert_particle_child <inert_particle_child>`             'child_object_type' of inert_particle.

:ref:`droplet_particle_child <droplet_particle_child>`       'child_object_type' of droplet_particle.

:ref:`particle_mixture_child <particle_mixture_child>`       'child_object_type' of particle_mixture.

:ref:`material_child <material_child_1>`                             'child_object_type' of material.

======================================================   ============================================

